syntax = "proto3";

option go_package = "../dhcp";

service DhcpService {
  rpc SearchSubnet(SearchSubnetRequest) returns (SearchSubnetResponse);
  rpc SearchClosestSubnet(SearchClosestSubnetRequest)
      returns (SearchClosestSubnetResponse);
}

message SearchSubnetRequest { repeated string id = 1; }
message SearchSubnetResponse { repeated Subnet subnets = 1; }

message SearchClosestSubnetRequest {
  repeated string id = 1;
  string ip = 2;
}
message SearchClosestSubnetResponse { Subnet subnet = 1; }

message Subnet {
  string id = 1;
  string subnet = 2;
  uint32 subnet_id = 3;
  string tags = 4;
  string network_type = 5;
  uint64 capacity = 6;
  string used_ratio = 7;
  uint64 used_count = 8;
  uint32 version = 9;
}
